name:                except-exceptions
version:             0.1
synopsis:            Safely and consistently deal with exceptions in ExceptT
homepage:            https://github.com/thumphries/except-exceptions
license:             BSD3
license-file:        LICENSE
author:              Tim Humphries
maintainer:          tim@utf8.me
category:            Monad
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src

  exposed-modules:     
                       Control.Monad.Trans.Except.Exception

  build-depends:
                       base                >=4.9 && <4.11
                     , exceptions          >=0.6 && <0.9
