name:                except-exceptions
version:             0.1
synopsis:            Safely deal with exceptions in ExceptT
license:             BSD3
license-file:        LICENSE
author:              Tim Humphries
maintainer:          Tim Humphries <tim@utf8.me>
category:            Monad
build-type:          Simple
cabal-version:       >=1.10
description:
  Exception-related functions for @ExceptT@.
  .
  As of @exceptions-0.9.0@, @ExceptT@ has a valid and sensible
  @MonadMask@ instance. If available, this package simply re-exports the
  relevant functions from @exceptions@.

tested-with:
    GHC == 7.6.3
  , GHC == 7.8.4
  , GHC == 7.10.2
  , GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.1

homepage:              https://github.com/thumphries/except-exceptions
bug-reports:           https://github.com/thumphries/except-exceptions/issues
source-repository head
  type: git
  location: https://github.com/thumphries/except-exceptions

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src

  exposed-modules:     
                       Control.Monad.Trans.Except.Exception

  build-depends:
                       base                >=3   && <4.12
                     , exceptions          >=0.6 && <0.11
                     , transformers        >=0.4 && <0.6
